--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.png">
     <title>Admin One — Vue Bulma Dashboard</title>
-
+    <style>
+      html{
+        font-size: 14px;
+      }
+    </style>
     <!-- Fonts -->
     <link rel="dns-prefetch" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
